# ToyRobotProject

./: .gitignore  Dockerfile  LICENSE  README.md  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docker.yml  publish.yml  unit-tests.yml
resources/: test5.txt
toyrobot/: app.py
toyrobot/models/: orientation.py  robot.py  tabletop.py
toyrobot/parser/: commandparser.py
toyrobot/test/: test_commandparser.py  test_main.py  test_orientation.py  test_robot.py  test_tabletop.py
