[metadata]
name = toyrobot
version = 0.1.0
license = "MIT"
description = "ToyRobot Example Implementation"
long_description = file: README.md
author = "Richard Lupat"

[options]
packages = find:
package_dir =
    = toyrobot
include_package_data = True

[options.packages.find]
where = toyrobot

[options.entry_points]
console_scripts =
    toyrobot = toyrobot.app:main


